# scadman_helper

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  Cargo.toml  Makefile.toml  README.md  clippy.toml  flake.nix  justfile
src/: lib.rs  test_utils.rs
src/geometry/: builders.rs  mod.rs  plane.rs
src/shapes/: honeycomb.rs  mod.rs  rounded.rs  screw.rs  snapfit.rs
src/transform/: fillet_2d.rs  fillet_3d.rs  map.rs  mod.rs
